--- a/front/styles/styles.css
+++ b/front/styles/styles.css
@@ -100,6 +100,10 @@ main {
   border-radius: 12px;
 }
 
+.imagen-cine {
+  background-size: cover;
+}
+
 .container-texto {
   display: flex;
   width: 561px;
@@ -194,13 +198,11 @@ main {
 
 .footer {
   display: flex;
-  width: 1280px;
   height: 152px;
   padding: 0px 160px;
   justify-content: center;
   align-items: flex-start;
   flex-shrink: 0;
-  margin-top: auto;
 }
 
 .container-footer {
