--- a/front/styles/styles.css
+++ b/front/styles/styles.css
@@ -1,4 +1,40 @@
-header {
+.card-img-top {
+  transition: opacity 0.3s ease; /* Agrega una transición suave */
+}
+
+.card:hover .card-img-top {
+  opacity: 0.2; /* Cambia la opacidad del texto al hacer hover */
+}
+
+.card:hover .card-text {
+  display: block !important;
+}
+
+.calificacion-peli {
+  display: inline-block;
+  max-width: 40px;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
+  overflow: hidden;
+  white-space: nowrap;
+  text-align: center;
+}
+
+.calificacion-peli.verde {
+  background-color: green;
+}
+
+.calificacion-peli.amarillo {
+  background-color: rgb(245, 245, 87);
+  color: #1c110c;
+}
+
+.calificacion-peli.rojo {
+  background-color: red;
+}
+
+/* header {
   display: flex;
   height: 40px;
   align-items: center;
@@ -122,7 +158,7 @@ main {
   font-size: 48px;
   font-style: normal;
   font-weight: 700;
-  line-height: 60px; /* 125% */
+  line-height: 60px;
   letter-spacing: -1.584px;
 }
 
@@ -142,7 +178,7 @@ main {
   font-size: 32px;
   font-style: normal;
   font-weight: 700;
-  line-height: 40px; /* 125% */
+  line-height: 40px;
   letter-spacing: -0.8px;
 }
 
@@ -167,34 +203,13 @@ main {
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
-  line-height: 24px; /* 150% */
+  line-height: 24px; 
 }
 
 .img-peli {
   border-radius: 12px;
 }
 
-.calificacion-peli {
-  display: inline-block;
-  width: 20px;
-  padding: 5px 10px;
-  border-radius: 5px;
-  color: white;
-  font-weight: bold;
-}
-
-.calificacion-peli.verde {
-  background-color: green;
-}
-
-.calificacion-peli.amarillo {
-  background-color: rgb(245, 245, 87);
-  color: #1c110c;
-}
-
-.calificacion-peli.rojo {
-  background-color: red;
-}
 
 .footer {
   display: flex;
@@ -240,5 +255,5 @@ main {
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 24px; /* 150%*/
-}
+  line-height: 24px; 
+} */
